--- a/NetworkSocket.csproj
+++ b/NetworkSocket.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Network_Socket</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>NetworkSocket</RootNamespace>
+    <ImplicitUsings>disble</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
