--- a/NetworkSocket.csproj
+++ b/NetworkSocket.csproj
@@ -1,11 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>NetworkSocket</RootNamespace>
     <ImplicitUsings>disble</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject>NetworkSocket.Program</StartupObject>
   </PropertyGroup>
-
+  <ItemGroup>
+    <None Include="http\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>  </ItemGroup>
 </Project>
