--- a/NetworkSocket.csproj
+++ b/NetworkSocket.csproj
@@ -10,6 +10,9 @@
   <ItemGroup>
     <None Include="http\**\*.*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>      
+    <None Include="User.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>  
   </ItemGroup>
 </Project>
